# py-bili-live-tool

./: Cargo.toml  README.md  bili_areas.json  bili_config.yaml  bili_cookie.json  bili_live_tool.py  requirements.txt
.github/workflows/: release.yml
src/: main.rs
