[package]
name = "bili-live-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
reqwest = { version = "0.12.12", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
md-5 = "0.10.6"
hex = "0.4.3"
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive"] }
qrcode = "0.14.1"
url = "2.5.4"
